--- a/arch/arm/configs/j1sp-perf_defconfig
+++ b/arch/arm/configs/j1sp-perf_defconfig
@@ -2,10 +2,10 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION="-perf"
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
-CONFIG_HAVE_KERNEL_LZO=y
+CONFIG_HAVE_KERNEL_XZ=y
 # CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
-CONFIG_KERNEL_LZO=y
+CONFIG_KERNEL_XZ=y
 CONFIG_SYSVIPC=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
@@ -395,6 +395,8 @@ CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
 CONFIG_FB_MSM_MIPI_LGIT_VIDEO_WXGA_PT_PANEL=y
 CONFIG_FB_MSM_HDMI_MSM_PANEL=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
+CONFIG_SYNC=y 
+CONFIG_SW_SYNC=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_LGE_BACKLIGHT_LM3530=y
 CONFIG_LGE_BACKLIGHT_CABC=y
@@ -586,6 +588,7 @@ CONFIG_LGE_SUSPEND_TIME=y
 CONFIG_LGE_EARLYSUSPEND_FUNC_TIME=y
 CONFIG_MIGRATION=y
 CONFIG_COMPACTION=y
+CONFIG_KSM=y
 # FEATURE_SDCARD_ENCRYPTION dongjune.kim@lge.com
 #CONFIG_CRYPTO=y
 #CONFIG_CRYPTO_ALGAPI=y
@@ -633,4 +636,6 @@ CONFIG_TUN=y
 CONFIG_MHL_D3_SUPPORT=y
 CONFIG_VIDEO_MHL_V2=y
 CONFIG_FB_MSM_MIPI_DSI=y
-MDDI_HOST_WINDOW_WORKAROUND=y
+CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
+CONFIG_FB_MSM_MDP_HW=y
+CONFIG_MDDI_HOST_WINDOW_WORKAROUND=y
